--- a/src/pages/Panel/index.html
+++ b/src/pages/Panel/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dev Tools Panel</title>
+    <title>XXXXXXXXXXXXXXXXXXXXXXDev Tools Panel</title>
   </head>
 
   <body>
-    <div id="app-container"></div>
+    <div id="app-container">yo wadup</div>
   </body>
 </html>
